# Lufus

./: .gitignore  H  README.md  build-musl.sh  build.sh  lufus.sh  pyproject.toml  renovate.json  requirements-python.txt
.github/workflows/: build.yml  nuitka.yml
docs/: contributing.md  installation.md
docs/internals/: B_Guidelines_and_Standards.md  D_GUI.md  E_USB_Detection_and_Info.md  G_Flashing_Linux.md  H_Flashing_Windows.md  installation.md
scripts/: build-nuitka.sh
src/lufus/: state.py  utils.py
src/lufus/drives/: autodetect_usb.py  find_usb.py  formatting.py  states.py
src/lufus/gui/: dialogs.py  gui.py  start_gui.py  workers.py
src/lufus/gui/languages/: Deutsch.csv  English.csv  Español.csv  Esperanto.csv  Français.csv  Português Brasileiro.csv  Svenska.csv  Ukrainian.csv  Русский.csv  українська.csv  עברית.csv  عربي.csv  বাংলা.csv
src/lufus/writing/: flash_usb.py  flash_windows.py  flash_woeusb.py  flash_worker.py  install_ventoy.py
src/lufus/writing/windows/: flash.py  tweaks.py
tests/: conftest.py  test_flash_usb_and_find_usb_fixes.py  test_flash_windows_and_install_ventoy_fixes.py  test_formatting.py  test_states_and_autodetect_fixes.py
