# pyproject.toml for Lufus
# Generated with Briefcase template 0.4.1, updated for platformdirs

[tool.briefcase]
project_name = "Lufus"
bundle = "com.github.hog185"
version = "0.0.1"
url = "https://github.com/Hog185/Lufus"
license.file = "LICENSE"
author = "Hog185"
author_email = "example@example.com"

[tool.briefcase.app.lufus]
formal_name = "Lufus"
description = "A rufus clone written in Python and designed to work with Linux."
long_description = """
Lufus is a physical drive imaging and formatting utility written in Python, inspired by Rufus, with the goal of delivering a greater experience for Linux users.
"""
sources = ["src/lufus"]
test_sources = ["tests"]

# Python packages required for this app
requires = [
    "psutil>=7.2.2",
    "pyqt6>=6.10.2",
    "pyudev>=0.24.4",
    "platformdirs>=3.11.0"
]

test_requires = [
    "pytest>=9.0.2",
    "iniconfig>=2.3.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pygments>=2.19.2"
]

# macOS-specific settings
[tool.briefcase.app.lufus.macOS]
universal_build = true
min_os_version = "12.0"
requires = ["std-nslog~=1.0.3"]

# Linux settings
[tool.briefcase.app.lufus.linux]
requires = []

[tool.briefcase.app.lufus.linux.system.debian]
system_requires = []
system_runtime_requires = [
    "libgl1",
    "libqt6dbus6",
    "libqt6gui6",
    "libxcb-cursor0",
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libxcb-shape0",
    "libxkbcommon-x11-0",
]

[tool.briefcase.app.lufus.linux.system.rhel]
system_requires = []
system_runtime_requires = ["qt6-qtbase-gui"]

[tool.briefcase.app.lufus.linux.system.suse]
system_requires = []
system_runtime_requires = [
    "libgthread-2_0-0",
    "libQt6Gui6",
]

[tool.briefcase.app.lufus.linux.system.arch]
system_requires = []
system_runtime_requires = ["qt6-base"]

[tool.briefcase.app.lufus.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = []
linuxdeploy_plugins = []

[tool.briefcase.app.lufus.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.9"
flatpak_sdk = "org.kde.Sdk"

# Windows
[tool.briefcase.app.lufus.windows]
requires = []

# Mobile deployments
[tool.briefcase.app.lufus.iOS]
supported = false

[tool.briefcase.app.lufus.android]
supported = false

# Web deployments
[tool.briefcase.app.lufus.web]
supported = false

# Project metadata for pyproject / pip
[project]
name = "lufus"
version = "0.1.0"
description = "Physical drive imaging and formatting utility written in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pyqt6>=6.10.2",
    "pyudev>=0.24.4",
    "platformdirs>=3.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "iniconfig>=2.3.0",
    "packaging>=26.0",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
]
